Folding in RAGinator checks, so group status of github and trello can be checked.
